--- a/main.css
+++ b/main.css
@@ -20,7 +20,6 @@ p {
 
 input {
 	height: 2rem;
-	cursor: pointer;
 }
 
 button {
@@ -126,4 +125,20 @@ body {
 	display: flex;
 	justify-content: center;
 	gap: 1rem;
+}
+
+.user-msg {
+	position: absolute;
+	top: 50px;
+	right: 10px;
+	padding: 10px;
+}
+
+.success {
+	background-color: lightgreen;
+}
+
+.error {
+	background-color: red;
+	color: white;
 }
