--- a/main.css
+++ b/main.css
@@ -12,6 +12,18 @@ p {
 	margin: 0;
 }
 
+html,
+body,
+#app,
+.main {
+	height: 100%;
+}
+
+.main {
+	display: flex;
+	flex-direction: column;
+}
+
 .app-header h1 {
 	color: #84a98c;
 	font-size: 3rem;
@@ -87,6 +99,11 @@ body {
 	background-color: #d2d8df;
 }
 
+.book-details img {
+	min-height: 400px;
+	flex-shrink: 0;
+}
+
 .book-details button {
 	align-self: flex-end;
 	flex-shrink: 0;
@@ -141,4 +158,51 @@ body {
 .error {
 	background-color: red;
 	color: white;
+}
+
+.review-add {
+	background-color: #b8e0d2;
+	margin-top: 2rem;
+	padding: 1rem;
+}
+
+.review-add form {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 0.5rem;
+	margin-top: 1rem;
+}
+
+.review-add form > * {
+	height: 2.5rem;
+}
+
+.home-page {
+	flex-grow: 1;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.home-page {
+	position: relative;
+}
+
+.home-page::before {
+	background-image: url('img/homepage.jpeg');
+	content: '';
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	filter: brightness(0.6);
+}
+
+.home-page h1 {
+	font-size: 5rem;
+	color: whitesmoke;
+	text-shadow: 0px 0px 7px black;
+	z-index: 1;
 }
